--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${BINARY_DIR}bin)
 
 set(SHOOTUP_SRC
     main.cpp transform2D.cpp node2D.cpp
+    sprite.cpp
     )
 
 list(TRANSFORM SHOOTUP_SRC PREPEND "src/")
