New node system is working. Had to remade transform global methods.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${BINARY_DIR}bin)
 set(SHOOTUP_SRC
     main.cpp transform2D.cpp node2D.cpp
     sprite.cpp app.cpp node_library.cpp
+    node.cpp
     )
 
 list(TRANSFORM SHOOTUP_SRC PREPEND "src/")
